--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/shopping_mall6
+spring.datasource.url=jdbc:mysql://localhost:3306/shopping_mall7
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+logging.level.root=info
+logging.level.com.shoppingMall=debug
